# pocket_download

./: .gitignore  CMakeLists.txt  README.md
cmake/: hunter.cmake
cmake/download/: fetch.cmake  iniparser.cmake
config/: pocket.ini
inc/: http_downloader.hpp
src/: CMakeLists.txt  http_downloader.cpp  main.cpp
